# Market-Intelligence-Operations-Console

./: .editorconfig  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/: pull_request_template.md
.streamlit/: config.toml
app/: __init__.py  dashboard.py  dashboard_data.py
app_api/: __init__.py  main.py  schemas.py
config/: alerts.yaml  baskets.yaml  dashboard.yaml  earnings_map.yaml  exposure_rules.yaml  fred_series.yaml  macro_events.yaml  opportunity_weights.yaml  options_proxy.yaml  portfolio_research.yaml  proxy_registry.yaml  sector_constituents.yaml  sector_map.yaml  settings.yaml  tickers.yaml  validation.yaml  weights.yaml
docs/: daily_workflow.md  dashboard_guide.md  git_workflow.md  local_setup.md  streamlit_deployment.md  troubleshooting.md  weekly_workflow.md
notebooks/: demo_research_flow.ipynb  early_opportunity_detection.ipynb  event_and_earnings_research.ipynb  proxy_validation_research.ipynb
scripts/: bootstrap_local.sh  git_preflight.sh  run_daily.sh  run_weekly.sh  start_dashboard.sh
src/: __init__.py  main.py
tests/: test_alerting_agent.py  test_api_routes.py  test_basket_and_exposure.py  test_change_point.py  test_config_loading.py  test_dashboard_data.py  test_dashboard_loader.py  test_data_quality.py  test_early_opportunity_agent.py  test_earnings_revision_agent.py  test_exporters.py  test_macro_event_agent.py  test_macro_regime_agent.py  test_market_data.py  test_options_proxy_agent.py  test_orchestrators.py  (+8 more)
(+74 files in other folders)
